--- a/modules/portal/web/WEB-INF/templates/login.html
+++ b/modules/portal/web/WEB-INF/templates/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/resources/css/common.css}"/>
 </head>
 <body>
-<h2>Cuba Portal</h2>
+<h2>Black List Portal</h2>
 <div class="span6">
     <h3>Login</h3>
 
