--- a/modules/portal/web/WEB-INF/templates/public_all.html
+++ b/modules/portal/web/WEB-INF/templates/public_all.html
@@ -1,8 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Чёрный список</title>
-    <link th:href="@{/resources/css/public_all.css}" rel="stylesheet" type="text/css" media="all">
-    <link rel="icon" type="image/gif" th:href="@{/resources/favicon.ico}"/>
+    <link rel="icon" type="image/gif" th:href="@{~/resources/favicon.ico}"/>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,7 +34,7 @@
                 <td th:text="${entry.firstName}"></td>
                 <td th:text="${entry.lastName}"></td>
                 <td>
-                    <a th:href="@{/public/entry(number=${entry.number})}"
+                    <a th:href="@{~/entry(number=${entry.number})}"
                        class="btn btn-light btn-sm active"
                        role="button"
                        aria-pressed="true">
