--- a/modules/portal/web/WEB-INF/templates/public_entry.html
+++ b/modules/portal/web/WEB-INF/templates/public_entry.html
@@ -1,8 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Запись списка</title>
-    <link th:href="@{/resources/css/public_all.css}" rel="stylesheet" type="text/css" media="all">
-    <link rel="icon" type="image/gif" th:href="@{/resources/favicon.ico}"/>
+    <link rel="icon" type="image/gif" th:href="@{~/resources/favicon.ico}"/>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
