--- a/modules/portal/web/WEB-INF/templates/public_entry.html
+++ b/modules/portal/web/WEB-INF/templates/public_entry.html
@@ -11,8 +11,11 @@
 </head>
 <body>
 <br>
-<div class="alert alert-danger rounded" role="alert">
-    <center>Представленные данные - это случайные вымышленные персонажи.</center>
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <center><h5>Представленные данные - это случайные вымышленные персонажи.</h5></center>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 <div class="container-xl">
     <br>
